--- a/CopySDK/CopySDK/CopySDK.csproj
+++ b/CopySDK/CopySDK/CopySDK.csproj
@@ -39,8 +39,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Authentication\OAuth.cs" />
+    <Compile Include="Authentication\OAuthResponse.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="CopyConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scope.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
