--- a/CopySDK/CopySDK.csproj
+++ b/CopySDK/CopySDK.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,13 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authentications\OAuthSession.cs" />
     <Compile Include="CopyClient.cs" />
     <Compile Include="CopyConfig.cs" />
     <Compile Include="Helpers\AuthorizationHeader.cs" />
+    <Compile Include="HttpRequest\HttpRequestHandler.cs" />
     <Compile Include="ICopyConfig.cs" />
     <Compile Include="Managers\UserManager.cs" />
-    <Compile Include="Models\Email.cs" />
+    <Compile Include="Models\AuthToken.cs" />
+    <Compile Include="Models\Config.cs" />
+    <Compile Include="Models\HttpRequestItem.cs" />
+    <Compile Include="Models\UserEmail.cs" />
     <Compile Include="Models\Storage.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,7 +62,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Authentication\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
