--- a/CopySDK/packages.config
+++ b/CopySDK/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="portable-win+net45+wp80" />
+  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="portable-win+net45+wp80" />
+  <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="portable-win+net45+wp80" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="portable-win+net45+wp80" />
 </packages>
