--- a/CopySDK/CopySDK.csproj
+++ b/CopySDK/CopySDK.csproj
@@ -43,9 +43,11 @@
     <Compile Include="Helpers\URL.cs" />
     <Compile Include="HttpRequest\HttpRequestHandler.cs" />
     <Compile Include="ICopyConfig.cs" />
+    <Compile Include="Managers\FileSystemManager.cs" />
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Models\AuthToken.cs" />
     <Compile Include="Models\Config.cs" />
+    <Compile Include="Models\FileSystem.cs" />
     <Compile Include="Models\HttpRequestItem.cs" />
     <Compile Include="Models\Storage.cs" />
     <Compile Include="Models\User.cs" />
