--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\CopySDK.Samples.WP\packages.config" />
   <repository path="..\CopySDK\packages.config" />
   <repository path="..\CopyTemp\packages.config" />
+  <repository path="..\Samples\CopySDK.Samples.Console\packages.config" />
+  <repository path="..\Samples\CopySDK.Samples.WP\packages.config" />
 </repositories>
