Fix File Upload

--- a/CopySDK.Samples.MVC/CopySDK.Samples.MVC.csproj
+++ b/CopySDK.Samples.MVC/CopySDK.Samples.MVC.csproj
@@ -310,6 +310,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CopySDK\CopySDK.csproj">
+      <Project>{C87C689A-510A-4820-BF1A-2E0DA19FCA38}</Project>
+      <Name>CopySDK</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
