Update File System, Init Link Manager

--- a/CopySDK/CopySDK.csproj
+++ b/CopySDK/CopySDK.csproj
@@ -42,15 +42,18 @@
     <Compile Include="CopyClient.cs" />
     <Compile Include="CopyAuth.cs" />
     <Compile Include="Helpers\AuthorizationHeader.cs" />
+    <Compile Include="Helpers\UnixDateTimeConverter.cs" />
     <Compile Include="Helpers\URL.cs" />
     <Compile Include="HttpRequest\HttpRequestHandler.cs" />
     <Compile Include="ICopyAuth.cs" />
+    <Compile Include="Managers\LinkManager.cs" />
     <Compile Include="Managers\FileSystemManager.cs" />
     <Compile Include="Managers\UserManager.cs" />
     <Compile Include="Models\AuthToken.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\FileSystem.cs" />
     <Compile Include="Models\HttpRequestItem.cs" />
+    <Compile Include="Models\Link.cs" />
     <Compile Include="Models\Storage.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserEmail.cs" />
